add link to refered webpages

--- a/P1_requirements.html
+++ b/P1_requirements.html
@@ -93,7 +93,7 @@
               </li>
             </ul>
           </ul>
-          The band would not like a typical web page from the 70’s with a lot of menus, boring fonts and colors like greenday.com or jamiroquai.com. They would preferably like a page where everything is on one page and menu elements in the header links to a different
+          The band would not like a typical web page from the 70’s with a lot of menus, boring fonts and colors like <a href="greenday.com">greenday.com</a> or <a href="jamiroquai.com">jamiroquai.com</a>. They would preferably like a page where everything is on one page and menu elements in the header links to a different
           part of the same page.
         </p>
         <h2>Server for finished site</h2>
