--- a/P1_requirements.html
+++ b/P1_requirements.html
@@ -41,12 +41,16 @@
           Our client is the band Ham Crate. <br> Our contact person is Frank Crate.<br> Ham Crate is a newly started band, starting to get a few streams on Spotify. Frank is the main vocalist in the band. He is the spokesperson for the band and will be
           the one we communicate with and he will be our link to the band. It is also his responsibility to make sure the demands from the band are communicated to us.
         </p>
+      </section>
+      <section>
         <h2>Site’s purpose and goals</h2>
         <p>
           Frank wants a site to promote his band Ham Crate.<br> The main goals of the web site is increasing the popularity of Ham Crate. This means getting more streams on Spotify, more views on YouTube and more people on concerts. This can be accomplished
           by supplying new music and pictures from concerts, as well as an appealing design and impression of professionality. Another goal is keeping existing supporters and satisfy their wishes. To accomplish this, we plan to supply existing supporters
           with information about the band. This includes history, information about band members, and upcoming events. A third goal is earning some money by selling products.
         </p>
+      </section>
+      <section>
         <h2>Typical audience</h2>
         <p>
           The primary audience for this site will be people who have heard a little bit about the band and are curious about the band and their music. It will therefore be important that the site accommodates the needs for new listeners and make them want to continue
@@ -55,6 +59,8 @@
         <p>
           The secondary user which this site will be for is already established fans. They will need to find more information about the band if they want and also upcoming shows for the band.
         </p>
+      </section>
+      <section>
         <h2>Content and organization</h2>
         <p>
           Here are the pages which will be included in the site:
@@ -93,9 +99,11 @@
               </li>
             </ul>
           </ul>
-          The band would not like a typical web page from the 70’s with a lot of menus, boring fonts and colors like <a href="greenday.com">greenday.com</a> or <a href="jamiroquai.com">jamiroquai.com</a>. They would preferably like a page where everything is on one page and menu elements in the header links to a different
-          part of the same page.
+          The band would not like a typical web page from the 70’s with a lot of menus, boring fonts and colors like <a href="greenday.com">greenday.com</a> or <a href="jamiroquai.com">jamiroquai.com</a>. They would preferably like a page where everything
+          is on one page and menu elements in the header links to a different part of the same page.
         </p>
+      </section>
+      <section>
         <h2>Server for finished site</h2>
         <p>
           The finished site will be located at <a href="hamcrate.rocks">http://hamcrate.rocks</a>. This will be hosted and maintained by the a representative of the band which will be assigned after our project is finished. Until the site is finished
@@ -103,7 +111,6 @@
         </p>
       </section>
     </article>
-    <footer class="footer">Footer</footer>
   </div>
 </body>
 
