--- a/P1_requirements.html
+++ b/P1_requirements.html
@@ -33,6 +33,13 @@
         <p>
           Date: September 2016
         </p>
+        <div id="logo-group">
+          <img id="Logo" src="../img/logo.png" alt="A delicious looking ham in a crate." />
+          <img id="daniel" src="../img/svgMembers/daniel.svg" alt="" />
+          <img id="henry" src="../img/svgMembers/henry.svg" alt="" />
+          <img id="magnus" src="../img/svgMembers/magnus.svg" alt="" />
+          <img id="nils" src="../img/svgMembers/nils.svg" alt="" />
+        </div>
         <hr>
       </section>
       <section>
