change Spotify to Soundcloud

--- a/P1_requirements.html
+++ b/P1_requirements.html
@@ -45,14 +45,14 @@
       <section>
         <h2>Administrative details</h2>
         <p>
-          Our client is the band Ham Crate. <br> Our contact person is Frank Crate.<br> Ham Crate is a newly started band, starting to get a few streams on Spotify. Frank is the main vocalist in the band. He is the spokesperson for the band and will be
+          Our client is the band Ham Crate. <br> Our contact person is Frank Crate.<br> Ham Crate is a newly started band, starting to get a few streams on Soundcloud. Frank is the main vocalist in the band. He is the spokesperson for the band and will be
           the one we communicate with and he will be our link to the band. It is also his responsibility to make sure the demands from the band are communicated to us.
         </p>
       </section>
       <section>
         <h2>Site’s purpose and goals</h2>
         <p>
-          Frank wants a site to promote his band Ham Crate.<br> The main goals of the web site is increasing the popularity of Ham Crate. This means getting more streams on Spotify, more views on YouTube and more people on concerts. This can be accomplished
+          Frank wants a site to promote his band Ham Crate.<br> The main goals of the web site is increasing the popularity of Ham Crate. This means getting more streams on Soundcloud, more views on YouTube and more people on concerts. This can be accomplished
           by supplying new music and pictures from concerts, as well as an appealing design and impression of professionality. Another goal is keeping existing supporters and satisfy their wishes. To accomplish this, we plan to supply existing supporters
           with information about the band. This includes history, information about band members, and upcoming events. A third goal is earning some money by selling products.
         </p>
