some specifications for the website

--- a/P1_requirements.html
+++ b/P1_requirements.html
@@ -45,8 +45,8 @@
       <section>
         <h2>Administrative details</h2>
         <p>
-          Our client is the band Ham Crate. <br> Our contact person is Frank Crate.<br> Ham Crate is a newly started band, starting to get a few streams on Soundcloud. Frank is the main vocalist in the band. He is the spokesperson for the band and will be
-          the one we communicate with and he will be our link to the band. It is also his responsibility to make sure the demands from the band are communicated to us.
+          Our client is the band Ham Crate. <br> Our contact person is Frank Crate.<br> Ham Crate is a newly started band, starting to get a few streams on Soundcloud. Frank is the main vocalist in the band. He is the spokesperson for the band and will
+          be the one we communicate with and he will be our link to the band. It is also his responsibility to make sure the demands from the band are communicated to us.
         </p>
       </section>
       <section>
@@ -66,6 +66,21 @@
         <p>
           The secondary user which this site will be for is already established fans. They will need to find more information about the band if they want and also upcoming shows for the band.
         </p>
+      </section>
+      <section>
+        <h2>Specific Preferences</h2>
+        <ul>
+          <li>The webpage should work both on </li>
+          <li>They want their logo on the site and as a favicon</li>
+          <li>They want a merch-page to showcase their merchandise. This will only be sold at their concerts.</li>
+          <li>The website should be easy to use. etc:
+            <ul>
+              <li>Find out who is the drummer.</li>
+              <li>Find out when the next concert is</li>
+              <li>Listen to their song demo</li>
+            </ul>
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Content and organization</h2>
@@ -100,10 +115,9 @@
               <li>Music videos and vlogs from life “on the road”
               </li>
             </ul>
-            <li>Store</li>
+            <li>Merchandise</li>
             <ul>
-              <li>Here we will make a page where fans can buy different merchandise such as t-shirts, music, posters or an all exclusive signed ham crate with real ham from the ham producer Stabburet.
-              </li>
+              <li>Here we will have a page to showcase all the merchandise that dedicated fans can buy: such as t-shirts, music, posters or an all exclusive signed ham crate with real ham from the ham producer Stabburet.</li>
             </ul>
           </ul>
           The band would not like a typical web page from the 70’s with a lot of menus, boring fonts and colors like <a href="greenday.com">greenday.com</a> or <a href="jamiroquai.com">jamiroquai.com</a>. They would preferably like a page where everything
